src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Customer_Attention_Reason_NEW__c</fullName>
        <label>Customer Attention Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown product usage</fullName>
                </value>
                <value>
                    <fullName>Minimal product usage</fullName>
                </value>
                <value>
                    <fullName>No relationship kickoff call</fullName>
                </value>
                <value>
                    <fullName>Renewal due in &lt;2 mos, opp not in Commit</fullName>
                </value>
                <value>
                    <fullName>Stakeholders dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Competitive pressure</fullName>
                </value>
                <value>
                    <fullName>No interaction in 4+ months</fullName>
                </value>
                <value>
                    <fullName>Technical issue</fullName>
                </value>
                <value>
                    <fullName>Training/services not scheduled</fullName>
                </value>
                <value>
                    <fullName>VMTurbo user left</fullName>
                </value>
                <value>
                    <fullName>Plan to outsource</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Deal_Structure__c</fullName>
        <label>Customer Deal Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Delight_Focus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for Marketing</description>
        <label>Customer Delight Focus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Experience_Notes__c</fullName>
        <label>Customer Experience Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Experience_Owner2__c</fullName>
        <description>New Customer Experience Owner Field to be filled in by workflow rule</description>
        <inlineHelpText>Do not use this field - it is scheduled to be deprecated</inlineHelpText>
        <label>Customer Experience Owner (Old)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Experience_Owner3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>New Customer Experience Owner as a lookup for Gainsight</description>
        <label>Customer Experience Owner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The CX owner chosen needs to be within the Role of Customer Account Manager or is a CX Director.</errorMessage>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00ED0000001ajD1</value>
            </filterItems>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00E570000028QKI</value>
            </filterItems>
            <infoMessage>This entry must be a member of the CX team</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Experience_Owner_Region__c</fullName>
        <description>Stamped by Workflow Rule &quot;Stamp Customer Experience Owner Region&quot;</description>
        <label>Customer Experience Owner Region</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Experience_Owner__c</fullName>
        <formula>IF(TEXT(Manual_Customer_Experience_Owner__c)&lt;&gt;&quot;&quot;,TEXT(Manual_Customer_Experience_Owner__c),
IF(OR(TEXT(Customer_LTV_Tier__c)=&quot;Tier 1 (1M+)&quot;,TEXT(Customer_LTV_Tier__c)=&quot;Tier 2 (500K+)&quot;),
IF(Account_Management_Territory__c=&quot;East&quot;,&quot;X Andy Robinson&quot;,
IF(Account_Management_Territory__c=&quot;Central&quot;,&quot;X Ryan Stone&quot;,
IF(Account_Management_Territory__c=&quot;West&quot;,&quot;X Lizzy Leahy&quot;,&quot;&quot;))),
IF(TEXT(Customer_LTV_Tier__c)=&quot;Tier 3 (100K+)&quot;,
IF(OR(Territory_Owner_Team__c=&quot;Ganas iOS&quot;),&quot;X Robert Young&quot;,
IF(Account_Management_Territory__c=&quot;East&quot;,&quot;X Michael Scott&quot;,
IF(Account_Management_Territory__c=&quot;Central&quot;,&quot;X Ryan Stone&quot;,
IF(Account_Management_Territory__c=&quot;West&quot;,&quot;X Chris Ward&quot;,&quot;&quot;)))),
IF(OR(Territory_Owner_Team__c=&quot;Ganas iOS&quot;),&quot;X Robert Young&quot;,
IF(Account_Management_Territory__c=&quot;East&quot;,&quot;X Michael Scott&quot;,
IF(Account_Management_Territory__c=&quot;West&quot;,&quot;X Neil Vaid&quot;,
IF(Account_Management_Territory__c=&quot;Central&quot;,&quot;X Neil Vaid&quot;,&quot;&quot;
)))))))</formula>
        <inlineHelpText>Do not use this field - it is scheduled to be deprecated</inlineHelpText>
        <label>Customer Experience Owner (Original)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_LTV_Tier__c</fullName>
        <label>Customer LTV Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1 (1M+)</fullName>
                    <color>#33CC00</color>
                    <label>Tier 1</label>
                </value>
                <value>
                    <fullName>Tier 2 (500K+)</fullName>
                    <color>#3366FF</color>
                    <label>Tier 2</label>
                </value>
                <value>
                    <fullName>Tier 3 (100K+)</fullName>
                    <color>#FF0000</color>
                    <label>Tier 3</label>
                </value>
                <value>
                    <fullName>Tier 4 (50K+)</fullName>
                    <color>#FF6600</color>
                    <label>Tier 4</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Maintenance_Status__c</fullName>
        <formula>IF(ISBLANK(Maintenance_Subscription_Cancelled_Date__c),&quot;Active&quot;,&quot;Did Not Renew&quot;)</formula>
        <label>Customer Maintenance Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Referenceability__c</fullName>
        <label>Customer Referenceability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not referenceable</fullName>
                    <default>true</default>
                    <label>Not referenceable</label>
                </value>
                <value>
                    <fullName>Sales reference only</fullName>
                </value>
                <value>
                    <fullName>Publicly referenceable</fullName>
                </value>
                <value>
                    <fullName>Publicly referenceable + case study</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_References__c</fullName>
        <label>Customer References</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Status_Details__c</fullName>
        <label>Customer Churn Risk Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Status_Last_CS_Convo_Date__c</fullName>
        <formula>TEXT(Customer_Status__c)&amp;&quot; (&quot;&amp;
IF(ISBLANK(Last_Customer_Success_Conversation_Date__c),&quot;N/A)&quot;,TEXT(MONTH(Last_Customer_Success_Conversation_Date__c))&amp;&quot;/&quot;&amp; 
TEXT(DAY(Last_Customer_Success_Conversation_Date__c))&amp;&quot;/&quot;&amp; 
TEXT(YEAR(Last_Customer_Success_Conversation_Date__c))&amp;&quot;)&quot;)</formula>
        <label>Customer Status (Last CS Convo Date)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Status_Last_Updated__c</fullName>
        <label>Customer Churn Risk Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Status_Numbers__c</fullName>
        <formula>CASE(Customer_Status__c,
&quot;Green&quot;,1,
&quot;Yellow&quot;,2,
&quot;Red&quot;,3,
0)</formula>
        <label>Customer Status #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Status_Updated_Date__c</fullName>
        <label>Customer Churn Risk Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <label>Customer Churn Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <color>#78C953</color>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <color>#F3D904</color>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>Red</fullName>
                    <color>#FF0000</color>
                    <label>Red</label>
                </value>
                <value>
                    <fullName>New</fullName>
                    <color>#3333FF</color>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Success_Comments__c</fullName>
        <label>Customer Success Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>VMT engineer responsible for ensuring a successful relationship post-sale</inlineHelpText>
        <label>Customer Success Engineer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00ED0000001RWzK</value>
            </filterItems>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00ED0000001bnAr</value>
            </filterItems>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00ED0000001bgDc</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Services__c</fullName>
        <label>Customer Success Services</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Success_Status_Reason__c</fullName>
        <description>Customer Success Status Reason</description>
        <label>Customer Success Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Customer_Success_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stakeholders dissatisfied/Lack of perceived value</fullName>
                </value>
                <value>
                    <fullName>Competitive Pressure</fullName>
                </value>
                <value>
                    <fullName>Minimal Product Usage</fullName>
                </value>
                <value>
                    <fullName>Champion Left</fullName>
                </value>
                <value>
                    <fullName>Technical issues</fullName>
                </value>
                <value>
                    <fullName>Minimal to no interaction</fullName>
                </value>
                <value>
                    <fullName>Champion actively promoting</fullName>
                </value>
                <value>
                    <fullName>Weekly/monthly positive feedback</fullName>
                </value>
                <value>
                    <fullName>High NPS scores</fullName>
                </value>
                <value>
                    <fullName>EA / beta tester</fullName>
                </value>
                <value>
                    <fullName>GC contributor</fullName>
                </value>
                <value>
                    <fullName>Positive enhancement requestor</fullName>
                </value>
                <value>
                    <fullName>Reference customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Success_Status__c</fullName>
        <description>Account Status Field for Customer Success</description>
        <label>Customer Success Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <color>#33FF33</color>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <color>#F3D904</color>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>Red</fullName>
                    <color>#FF0000</color>
                    <label>Red</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Success_Strategy__c</fullName>
        <description>The CS overall strategy for the account aligned with the customer priorities</description>
        <inlineHelpText>The CS overall strategy for the account aligned with the customer priorities</inlineHelpText>
        <label>Customer Success Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Tactical_Steps__c</fullName>
        <description>The CS steps required to ensure the strategy is being followed and demonstrated</description>
        <inlineHelpText>The CS steps required to ensure the strategy is being followed and demonstrated</inlineHelpText>
        <label>Customer Success Tactical Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Tier_Automated__c</fullName>
        <formula>IF(Total_Bookings__c &gt; 250000,&quot;Tier 1&quot;,
IF(Total_Bookings__c &gt; 150000,&quot;Tier 2&quot;,
IF(Total_Bookings__c &gt; 100000,&quot;Tier 3&quot;,
IF(Total_Bookings__c &gt; 50000, &quot;Tier 4&quot;,
IF(Total_Bookings__c &gt; 0,&quot;Tier 5&quot;,&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Wiki_Page__c</fullName>
        <description>Wiki Repository Page for given company.</description>
        <label>Customer Wiki Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Conflict__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conflict</label>
        <referenceTo>DSCORGPKG__Conflict__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Cust_Fiscal_Year__c</fullName>
        <label>Cust Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Custom_DUNS__c</fullName>
        <label>Custom_DUNS</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Custom_Emp_No__c</fullName>
        <label>Custom_Emp_No,</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Custom_NOA__c</fullName>
        <label>Custom_NOA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DO_3yr_Employees_Growth__c</fullName>
        <label>3yr Employees Growth %</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DO_3yr_Sales_Growth__c</fullName>
        <label>3yr Sales Growth %</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DeletedFromDiscoverOrg__c</fullName>
        <label>DeletedFromDiscoverOrg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>false</fullName>
                    <default>true</default>
                    <label>false</label>
                </value>
                <value>
                    <fullName>true</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_Created_On__c</fullName>
        <label>Created by DiscoverOrg</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_First_Update__c</fullName>
        <label>DiscoverOrg First Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_FullCountryName__c</fullName>
        <label>DiscoverOrg Country Full Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_ID__c</fullName>
        <description>DiscoverOrg DB object ID</description>
        <label>DiscoverOrg ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_LastUpdate__c</fullName>
        <label>DiscoverOrg Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_State_Full_Name__c</fullName>
        <label>DiscoverOrg State Full Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_Technologies__c</fullName>
        <label>DiscoverOrg Technologies</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Exclude_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User can use this checkbox to exclude record from getting updated from DiscoverOrg.</description>
        <label>Exclude from DiscoverOrg Auto Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__External_DiscoverOrg_Id__c</fullName>
        <externalId>true</externalId>
        <label>DiscoverOrg Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Fiscal_Year_End__c</fullName>
        <label>Fiscal Year End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Fortune_Rank__c</fullName>
        <label>Fortune Rank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__ITOrgChart__c</fullName>
        <formula>IF(ISBLANK(DSCORGPKG__DiscoverOrg_ID__c) = false,  
     HYPERLINK(
           &apos;/apex/DSCORGPKG__itorgchart?co_id=&apos;  +  DSCORGPKG__DiscoverOrg_ID__c ,
            &apos;View&apos;,
            &apos;_new&apos;) , 
    &apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IT Org Chart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__IT_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IT Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__IT_Employees__c</fullName>
        <label>IT Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>DiscoverOrg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Locked_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Locked By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__NAICS_Codes__c</fullName>
        <label>Primary NAICS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Ownership__c</fullName>
        <label>Ownership Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__SIC_Codes__c</fullName>
        <label>Primary SIC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_U_N_S_Number__c</fullName>
        <label>D-U-N-S Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Exec_Visit__c</fullName>
        <formula>IF( ISBLANK(Last_Exec_Visit__c),365,TODAY() -  Last_Exec_Visit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Exec Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Onsite__c</fullName>
        <formula>IF( ISBLANK(Last_On_Site_Visit__c) ,365, TODAY() - Last_On_Site_Visit__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Onsite</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_Last_Activity_with_Outcome__c</fullName>
        <formula>IF(NOT(ISBLANK(Last_Activity_with_Outcome_Date__c)),TODAY()-Last_Activity_with_Outcome_Date__c,null)</formula>
        <label>Days since Last Activity with Outcome</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demo_Count__c</fullName>
        <label>Demo Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Developer_Comments__c</fullName>
        <description>A notes section for the Developer to add comments to</description>
        <label>Developer Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Development_Owner__c</fullName>
        <label>Development Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dial_Count__c</fullName>
        <label>Dial Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dials_Before_First_Connect_Conv__c</fullName>
        <label># Dials Before First Conversation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dials_Before_First_Demo__c</fullName>
        <label># Dials Before First Demo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dials_Before_First_Evaluation_Meeting__c</fullName>
        <label># Dials Before First Evaluation Meeting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dials_in_Last_30_Days__c</fullName>
        <label>Dials in Last 30 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dials_in_Last_60_Days__c</fullName>
        <label>Dials in Last 60 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dials_in_Last_90_Days__c</fullName>
        <label>Dials in Last 90 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiscoverOrg_ID_VMT__c</fullName>
        <label>DiscoverOrg ID (VMT)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiscoverOrg_IT_Budget_Ops_IT_Budget__c</fullName>
        <formula>IT_Budget_Mil__c &gt; Ops_IT_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DiscoverOrg IT Budget &gt; Ops IT Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscoverOrg_Link__c</fullName>
        <label>DiscoverOrg Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DiscoverOrg_Stopped_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DiscoverOrg Stopped Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <label>Distributor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arrow</fullName>
                </value>
                <value>
                    <fullName>Lifeboat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Docker__c</fullName>
        <label>Docker</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drift_Owner_Email__c</fullName>
        <description>Email for Drift Routing. Will be set by a process builder to ensure that incoming chats are routed to the proper SDR based on account teams.</description>
        <label>Drift Owner Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMEA_Duplicate__c</fullName>
        <label>EMEA Duplicate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMEA_VMT_Account_Score__c</fullName>
        <formula>IF(Socket_Count__c+VM_Count__c&gt;0,if(OR(Socket_Count__c&gt;=120,VM_Count__c&gt;=1500),30000,if(OR(Socket_Count__c&gt;=90,VM_Count__c&gt;=1000),25000,MAX(Socket_Count__c,VM_Count__c/15))),
MIN(CASE(Industry_clean_text__c, 
&quot;Biotech &amp; Pharma&quot;,0.1,
&quot;Construction &amp; Engineering&quot;,0.7,
&quot;Education&quot;,0.3,
&quot;Energy &amp; Utilities&quot;,1,
&quot;Financial Services&quot;,1,
&quot;Food &amp; Beverage&quot;,0.7,
&quot;Government&quot;,0.3,
&quot;Healthcare&quot;,0.3,
&quot;Insurance&quot;,1,
&quot;Manufacturing &amp; Industrials&quot;,0.7,
&quot;Nonprofit&quot;,0.3,
&quot;Professional Services: Legal&quot;,0.7,
&quot;Professional Services: Other&quot;,0.7,
&quot;Retail &amp; Consumer Products&quot;,0.7,
&quot;Service Providers&quot;,1,
&quot;Tech: Internet&quot;,1,
&quot;Tech: All Other&quot;,1,
&quot;Tech: Software&quot;,1,
&quot;Telecom &amp; Media&quot;,1,
&quot;Transportation &amp; Logistics&quot;,1,
&quot;Travel &amp; Leisure&quot;,1,
&quot;Wholesale&quot;,0.7,
&quot;Other&quot;,0.3,
0.2)*CASE(BillingCountry,
&quot;United Kingdom&quot;,1,
&quot;Norway&quot;,0.9,
&quot;Sweden&quot;,0.9,
&quot;Finland&quot;,0.9,
&quot;Denmark&quot;,0.9,
&quot;Belgium&quot;,0.9,
&quot;Netherlands&quot;,0.9,
&quot;Luxembourg&quot;,0.9,
&quot;Germany&quot;,0.7,
&quot;Austria&quot;,0.7,
&quot;France&quot;,0.7,
&quot;Switzerland&quot;,0.7,
&quot;South Africa&quot;,0.7,
0.5)*NumberOfEmployees,20000))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMEA VMT Account Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERep_Request__c</fullName>
        <label>ERep Request</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERep_State__c</fullName>
        <formula>CASE( BillingState ,
&quot;California&quot;, &quot;Peter Boer&quot;,
&quot;Alabama&quot;, &quot;Anthony Fanale&quot;,
&quot;Florida&quot;, &quot;Anthony Fanale&quot;,
&quot;Georgia&quot;, &quot;Anthony Fanale&quot;,
&quot;Kentucky&quot;, &quot;Anthony Fanale&quot;,
&quot;Mississippi&quot;, &quot;Anthony Fanale&quot;,
&quot;Illinois&quot;, &quot;Brian Gramza&quot;,
&quot;Arkansas&quot;, &quot;Dave Cotten&quot;,
&quot;Louisiana&quot;, &quot;Dave Cotten&quot;,
&quot;Oklahoma&quot;, &quot;Dave Cotten&quot;,
&quot;Texas&quot;, &quot;Dave Cotten&quot;,
&quot;Ohio&quot;, &quot;Eric Winslow&quot;,
&quot;Pennsylvania&quot;, &quot;Eric Winslow&quot;,
&quot;Alaska&quot;, &quot;Leonard Veare&quot;,
&quot;Idaho&quot;, &quot;Leonard Veare&quot;,
&quot;Oregon&quot;, &quot;Leonard Veare&quot;,
&quot;Washington&quot;, &quot;Leonard Veare&quot;,
&quot;Delaware&quot;, &quot;Marcus Kornegay&quot;,
&quot;District Of Columbia&quot;, &quot;Marcus Kornegay&quot;,
&quot;Maryland&quot;, &quot;Marcus Kornegay&quot;,
&quot;North Carolina&quot;, &quot;Marcus Kornegay&quot;,
&quot;South Carolina&quot;, &quot;Marcus Kornegay&quot;,
&quot;Tennessee&quot;, &quot;Marcus Kornegay&quot;,
&quot;Virginia&quot;, &quot;Marcus Kornegay&quot;,
&quot;West Virginia&quot;, &quot;Marcus Kornegay&quot;,
&quot;New Jersey&quot;, &quot;Martin Smajlaj&quot;,
&quot;New York&quot;, &quot;Martin Smajlaj&quot;,
&quot;Arizona&quot;, &quot;Peter Boer&quot;,
&quot;Hawaii&quot;, &quot;Peter Boer&quot;,
&quot;Nevada&quot;, &quot;Peter Boer&quot;,
&quot;New Mexico&quot;, &quot;Peter Boer&quot;,
&quot;Connecticut&quot;, &quot;Sofia Fosdick&quot;,
&quot;Maine&quot;, &quot;Sofia Fosdick&quot;,
&quot;Massachusetts&quot;, &quot;Sofia Fosdick&quot;,
&quot;New Hampshire&quot;, &quot;Sofia Fosdick&quot;,
&quot;Rhode Island&quot;, &quot;Sofia Fosdick&quot;,
&quot;Vermont&quot;, &quot;Sofia Fosdick&quot;,
&quot;Indiana&quot;, &quot;TBH-Great Lakes&quot;,
&quot;Michigan&quot;, &quot;TBH-Great Lakes&quot;,
&quot;Colorado&quot;, &quot;TBH-Mid Central&quot;,
&quot;Kansas&quot;, &quot;TBH-Mid Central&quot;,
&quot;Missouri&quot;, &quot;TBH-Mid Central&quot;,
&quot;Nebraska&quot;, &quot;TBH-Mid Central&quot;,
&quot;North Dakota&quot;, &quot;TBH-Mid Central&quot;,
&quot;South Dakota&quot;, &quot;TBH-Mid Central&quot;,
&quot;Utah&quot;, &quot;TBH-Mid Central&quot;,
&quot;Wyoming&quot;, &quot;TBH-Mid Central&quot;,
&quot;Iowa&quot;, &quot;TBH-North Central&quot;,
&quot;Minnesota&quot;, &quot;TBH-North Central&quot;,
&quot;Montana&quot;, &quot;TBH-North Central&quot;,
&quot;Wisconsin&quot;, &quot;TBH-North Central&quot;,
&quot;Other&quot;)</formula>
        <label>ERep State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Count__c</fullName>
        <label>Email Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_for_Lead_link__c</fullName>
        <externalId>true</externalId>
        <label>Email for Lead link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emails_in_Last_30_Days__c</fullName>
        <label>Emails in Last 30 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emails_in_Last_60_Days__c</fullName>
        <label>Emails in Last 60 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emails_in_Last_90_Days__c</fullName>
        <label>Emails in Last 90 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Buckets__c</fullName>
        <formula>IF(ISBLANK(NumberOfEmployees),NULL,
IF(NumberOfEmployees&lt;250,&quot;a. &lt; 250&quot;,
IF(NumberOfEmployees&lt;500,&quot;b. 250-500&quot;,
IF(NumberOfEmployees&lt;1000,&quot;c. 500-1,000&quot;,
IF(NumberOfEmployees&lt;2000,&quot;d. 1,000-2,000&quot;,
IF(NumberOfEmployees&lt;5000,&quot;e. 2,000-5,000&quot;,
IF(NumberOfEmployees&lt;10000,&quot;f. 5,000-10,000&quot;,
&quot;g. 10,000+&quot;)))))))</formula>
        <label>Employee Buckets</label>
        <type>Text</type>
    </fields>
</CustomObject>